<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_preferences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="datastorageapp.android.cmpe277.datastorageapp.PreferencesActivity"
    tools:showIn="@layout/activity_preferences">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteColor"
                android:layout_marginLeft="30dp"
                android:paddingTop="20dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:text="@string/preferences_activity_title" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="70dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_book_name_label"
                android:textColor="@color/whiteColor"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/whiteColor"
                android:layout_marginLeft="10dp"
                android:id="@+id/book_name_id"
                android:maxLength="70"
                android:hint="Max 70 Characters"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_book_author_label"
                android:textColor="@color/whiteColor"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/whiteColor"
                android:layout_marginLeft="10dp"
                android:maxLength="70"
                android:id="@+id/book_author_id"
                android:hint="Max 70 Characters"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:textColor="@color/whiteColor"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/whiteColor"
                android:gravity="top"
                android:id="@+id/description"
                android:layout_marginLeft="15dp"
                android:maxLength="70"
                android:hint="Max 255 characters only"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp"
            android:gravity="center">
            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@color/eggColor"
                android:text="@string/save_btn"
                android:textAllCaps="false"
                android:onClick="save"/>
            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:background="@color/eggColor"
                android:textAllCaps="false"
                android:text="@string/cancel_btn"
                android:onClick="cancel"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
