<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sqlite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="datastorageapp.android.cmpe277.datastorageapp.SQLiteActivity"
    tools:showIn="@layout/activity_sqlite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteColor"
                android:layout_marginLeft="70dp"
                android:paddingTop="20dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:text="@string/sqlite_activity_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteColor"
                android:textSize="15dp"
                android:text="@string/blog_message_label"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top"
                android:background="@color/whiteColor"
                android:layout_marginLeft="15dp"
                android:hint="Maximum 255 characters only"
                android:maxLength="255" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="120dp"
            android:gravity="center">
            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@color/eggColor"
                android:text="@string/save_btn"
                android:textAllCaps="false"
                android:onClick="save"/>
            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:background="@color/eggColor"
                android:text="@string/cancel_btn"
                android:textAllCaps="false"
                android:onClick="cancel"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
