<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="datastorageapp.android.cmpe277.datastorageapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteColor"
                android:layout_marginLeft="10dp"
                android:paddingTop="20dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/main_activity_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp">
            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@color/eggColor"
                android:textAllCaps="false"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:onClick="createPreferences"
                android:text="@string/preferences_btn"/>
            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@color/eggColor"
                android:textAllCaps="false"
                android:onClick="createSQLiteDB"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/sqlite_btn"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="Display info"
            android:textColor="@color/whiteColor"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/close_btn"
            android:background="@color/eggColor"
            android:layout_marginTop="150dp"
            android:onClick="close"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>
